--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </div>
         <nav class="nav-links" id="navLinks">
             <a href="index.html">Inicio</a>
-            <a href="/Menu/menu.html">Menú</a>
-            <a href="/Reservacion/sec3.html">Reservación</a>
-            <a href="/Contacto/sec4.html">Contacto</a>
+            <a href="Menu/menu.html">Menú</a>
+            <a href="Reservacion/sec3.html">Reservación</a>
+            <a href="Contacto/sec4.html">Contacto</a>
         </nav>
     </header>
 
@@ -62,7 +62,7 @@
             </ul>
         </div>
         <div class="image">
-            <img src="Inicio/img/img-corte-2.jpg" alt="Imagen de carne">
+            <img src="/Inicio/img/img-corte-2.jpg" alt="Imagen de carne">
         </div>
     </section>
 
@@ -77,7 +77,7 @@
                 entre nuestra cuidada selección de vinos para una experiencia gastronómica completa y memorable.</p>
         </div>
         <div class="image">
-            <img src="Inicio/img/img-corte-3.jpg" alt="Imagen de carne">
+            <img src="/Inicio/img/img-corte-3.jpg" alt="Imagen de carne">
         </div>
     </section>
 
@@ -97,9 +97,9 @@
     <footer>
         <div class="footer-links-left">
             <a href="index.html">Inicio</a>
-            <a href="/Menu/menu.html">Menú</a>
-            <a href="/Reservacion/sec3.html">Reservación</a>
-            <a href="/Contacto/sec4.html">Contacto</a>
+            <a href="Menu/menu.html">Menú</a>
+            <a href="Reservacion/sec3.html">Reservación</a>
+            <a href="Contacto/sec4.html">Contacto</a>
         </div>
 
         <div class="footer-logo">
