--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </ul>
         </div>
         <div class="image">
-            <img src="/Inicio/img/img-corte-2.jpg" alt="Imagen de carne">
+            <img src="Inicio/img/img-corte-2.jpg" alt="Imagen de carne">
         </div>
     </section>
 
@@ -77,7 +77,7 @@
                 entre nuestra cuidada selección de vinos para una experiencia gastronómica completa y memorable.</p>
         </div>
         <div class="image">
-            <img src="/Inicio/img/img-corte-3.jpg" alt="Imagen de carne">
+            <img src="Inicio/img/img-corte-3.jpg" alt="Imagen de carne">
         </div>
     </section>
 
