--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -18,17 +18,17 @@
         </div>
         <nav class="nav-links" id="navLinks">
             <a href="index.html">Inicio</a>
-            <a href="/Menu/menu.html">Menú</a>
-            <a href="/Reservacion/sec3.html">Reservación</a>
-            <a href="/Contacto/sec4.html">Contacto</a>
+            <a href="Menu/menu.html">Menú</a>
+            <a href="Reservacion/sec3.html">Reservación</a>
+            <a href="Contacto/sec4.html">Contacto</a>
         </nav>
     </header>
 
 <section class="carousel">
     <h2>Recomendación</h2>
     <div class="carousel-container">
-        <img src="Menu/IMG/recomendacion-1.jpg" alt="Plato recomendado">
-        <img src="Menu/IMG/recomendacion-2.jpg" alt="Plato recomendado">
+        <img src="IMG/recomendacion-1.jpg" alt="Plato recomendado">
+        <img src="IMG/recomendacion-2.jpg" alt="Plato recomendado">
         <img src="IMG/Recomendacion-3.jpg" alt="Plato recomendado">
     </div>
 </section>
@@ -45,7 +45,7 @@
 <section class="menu-section">
     <h2>Bebidas</h2>
     <div class="carousel-wrapper" id="bebidas">
-        <img src="Menu/IMG/Vino-1.jpg" alt="Vino 1">
+        <img src="IMG/Vino-1.jpg" alt="Vino 1">
         <img src="IMG/Vino-2.jpg" alt="Vino 2">
         <img src="IMG/Vino-3.jpg" alt="Vino 3">
     </div>
@@ -54,9 +54,9 @@
 <footer>
     <div class="footer-links-left">
         <a href="index.html">Inicio</a>
-        <a href="/Menu/menu.html">Menú</a>
-        <a href="/Reservacion/sec3.html">Reservación</a>
-        <a href="/Contacto/sec4.html">Contacto</a>
+        <a href="Menu/menu.html">Menú</a>
+        <a href="Reservacion/sec3.html">Reservación</a>
+        <a href="Contacto/sec4.html">Contacto</a>
     </div>
 
     <div class="footer-logo">
