--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="navbar" id="navbar">
-        <a href="index.html"><img src="Inicio/img/logotipo.png" alt="Logo"></a>
+        <a href="../index.html"><img src="../Inicio/img/logotipo.png" alt="Logo"></a>
         
         <div class="menu-toggle">
             <div></div>
@@ -17,10 +17,10 @@
             <div></div>
         </div>
         <nav class="nav-links" id="navLinks">
-            <a href="index.html">Inicio</a>
-            <a href="Menu/menu.html">Menú</a>
-            <a href="Reservacion/sec3.html">Reservación</a>
-            <a href="Contacto/sec4.html">Contacto</a>
+            <a href="../index.html">Inicio</a>
+            <a href="../Menu/menu.html">Menú</a>
+            <a href="../Reservacion/sec3.html">Reservación</a>
+            <a href="../Contacto/sec4.html">Contacto</a>
         </nav>
     </header>
 
@@ -45,7 +45,7 @@
 <section class="menu-section">
     <h2>Bebidas</h2>
     <div class="carousel-wrapper" id="bebidas">
-        <img src="IMG/Vino-1.jpg" alt="Vino 1">
+        <img src="/IMG/Vino-1.jpg" alt="Vino 1">
         <img src="IMG/Vino-2.jpg" alt="Vino 2">
         <img src="IMG/Vino-3.jpg" alt="Vino 3">
     </div>
@@ -53,14 +53,14 @@
 
 <footer>
     <div class="footer-links-left">
-        <a href="index.html">Inicio</a>
-        <a href="Menu/menu.html">Menú</a>
-        <a href="Reservacion/sec3.html">Reservación</a>
-        <a href="Contacto/sec4.html">Contacto</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../Menu/menu.html">Menú</a>
+        <a href="../Reservacion/sec3.html">Reservación</a>
+        <a href="../Contacto/sec4.html">Contacto</a>
     </div>
 
     <div class="footer-logo">
-        <img src="Inicio/img/logotipo.png" alt="Logo">
+        <img src="../Inicio/img/logotipo.png" alt="Logo">
     </div>
 
     <div class="footer-links-right">
