--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -45,7 +45,7 @@
 <section class="menu-section">
     <h2>Bebidas</h2>
     <div class="carousel-wrapper" id="bebidas">
-        <img src="/IMG/Vino-1.jpg" alt="Vino 1">
+        <img src="IMG/Vino-1.jpg" alt="Vino 1">
         <img src="IMG/Vino-2.jpg" alt="Vino 2">
         <img src="IMG/Vino-3.jpg" alt="Vino 3">
     </div>
