--- a/Contacto/sec4.html
+++ b/Contacto/sec4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Contacto/CSS/contacto.css">
+    <link rel="stylesheet" href="CSS/contacto.css">
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <title>LE COEUR DE VIANDE</title>
