--- a/Contacto/sec4.html
+++ b/Contacto/sec4.html
@@ -11,7 +11,7 @@
 <body>
 
   <header class="navbar" id="navbar">
-    <a href="index.html"><img src="Inicio/img/logotipo.png" alt="Logo"></a>
+    <a href="../index.html"><img src="../Inicio/img/logotipo.png" alt="Logo"></a>
     
     <div class="menu-toggle">
         <div></div>
@@ -19,10 +19,10 @@
         <div></div>
     </div>
     <nav class="nav-links" id="navLinks">
-        <a href="index.html">Inicio</a>
-        <a href="Menu/menu.html">Menú</a>
-        <a href="Reservacion/sec3.html">Reservación</a>
-        <a href="Contacto/sec4.html">Contacto</a>
+        <a href="../index.html">Inicio</a>
+        <a href="../Menu/menu.html">Menú</a>
+        <a href="../Reservacion/sec3.html">Reservación</a>
+        <a href="../Contacto/sec4.html">Contacto</a>
     </nav>
   </header>
     
@@ -58,14 +58,14 @@
 
       <footer>
         <div class="footer-links-left">
-            <a href="index.html">Inicio</a>
-            <a href="Menu/menu.html">Menú</a>
-            <a href="Reservacion/sec3.html">Reservación</a>
-            <a href="Contacto/sec4.html">Contacto</a>
+            <a href="../index.html">Inicio</a>
+            <a href="../Menu/menu.html">Menú</a>
+            <a href="../Reservacion/sec3.html">Reservación</a>
+            <a href="../Contacto/sec4.html">Contacto</a>
         </div>
 
         <div class="footer-logo">
-            <img src="Inicio/img/logotipo.png" alt="Logo">
+            <img src="../Inicio/img/logotipo.png" alt="Logo">
         </div>
 
         <div class="footer-links-right">
