--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -73,6 +73,6 @@
 </footer>
 
 <script src="JS/script.js"></script>
-<script src="Inicio/script/scriptsind.js"></script>
+<script src="../Inicio/script/scriptsind.js"></script>
 </body>
 </html>
