--- a/Reservacion/sec3.html
+++ b/Reservacion/sec3.html
@@ -112,6 +112,6 @@
             </div>
     </footer>
 
-    <script src="Inicio/script/scriptsind.js"></script>
+    <script src="../Inicio/script/scriptsind.js"></script>
 </body> 
 </html>
