--- a/Contacto/sec4.html
+++ b/Contacto/sec4.html
@@ -78,7 +78,7 @@
     </footer>
     
       <script src="contacto.js"></script>
-      <script src="Inicio/script/scriptsind.js"></script>
+      <script src="../Inicio/script/scriptsind.js"></script>
 
 </body>
 </html>
